  relatively baroque tail -f /dev/stdin < /etc/passwd would work.  Now, the
  offending usage causes tail to revert to its conventional sleep-based
  (i.e., not inotify-based) implementation.
  [bug introduced in coreutils-7.5]

** New features

  cp --reflink accepts a new "auto" parameter which falls back to
  a standard copy if creating a copy-on-write clone is not possible.


* Noteworthy changes in release 7.5 (2009-08-20) [stable]

** Bug fixes

  dd's oflag=direct option now works even when the size of the input
  is not a multiple of e.g., 512 bytes.

  dd now handles signals consistently even when they're received
  before data copying has started.

  install runs faster again with SELinux enabled
  [introduced in coreutils-7.0]

  ls -1U (with two or more arguments, at least one a nonempty directory)
  would print entry names *before* the name of the containing directory.
  Also fixed incorrect output of ls -1RU and ls -1sU.
  [introduced in coreutils-7.0]

  sort now correctly ignores fields whose ending position is specified
  before the start position. Previously in numeric mode the remaining
  part of the line after the start position was used as the sort key.
  [This bug appears to have been present in "the beginning".]

  truncate -s failed to skip all whitespace in the option argument in
  some locales.

** New programs

  stdbuf: A new program to run a command with modified stdio buffering
  for its standard streams.

** Changes in behavior

  ls --color: files with multiple hard links are no longer colored differently
  by default. That can be enabled by changing the LS_COLORS environment
  variable. You can control that using the MULTIHARDLINK dircolors input
  variable which corresponds to the 'mh' LS_COLORS item. Note these variables
  were renamed from 'HARDLINK' and 'hl' which were available since
  coreutils-7.1 when this feature was introduced.

** Deprecated options
