@@ -490,6 +490,7 @@ Ralph Loader                        loader@maths.ox.ac.uk
 Raul Miller                         moth@magenta.com
 Raúl Núñez de Arenas Coronado       raul@pleyades.net
 Reuben Thomas                       rrt@sc3d.org
+Ren Yang                            ryang@redhat.com
 Richard A Downing                   richard.downing@bcs.org.uk
 Richard Braakman                    dark@xs4all.nl
 Richard Dawe                        rich@phekda.freeserve.co.uk
